<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity$MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:textSize="20sp"
        android:labelFor="@+id/register_no"
        android:text="@string/label_register_no" />

    <EditText
        android:id="@+id/register_no"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionSend"
        android:hint="@string/hint_register_no"
        android:inputType="text"
        android:paddingTop="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:layout_gravity="center"
        android:text="@string/label_register" />

</LinearLayout>
